Fix overlay z-index

--- a/packages/spequoia-web/src/components/test-player/test-player.component.scss
+++ b/packages/spequoia-web/src/components/test-player/test-player.component.scss
@@ -181,6 +181,7 @@
   padding: 1rem 0.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   font-size: 0.9rem;
+  z-index: 200;
 
   button {
     margin-top: 0.5rem;
